# cs2430-projects

./: .gitignore  README.md
docs/: Callahan_Connor_project0.md
project1/: CMakeLists.txt  README.md  main.cpp
project1/docs/: callahan_connor_p1_report.md
project1/src/: main.cpp
project1/src/algorithms/: generator.cpp  sorting.cpp
project1/src/include/: generator.h  sorting.h
project2/: CMakeLists.txt  README.md
project2/docs/: callahan_connor_p2_report.md
project2/src/: main.cpp  output.txt
project2/src/include/: ConsoleOutput.h  multisetOps.h  setOps.h
project2/src/output/: ConsoleOutput.cpp
project2/src/sets/: multisetOps.cpp  setOps.cpp
project3/: CMakeLists.txt  README.md
project3/docs/: callahan_connor_p3_report.md
project3/src/: knapsack.cpp  main.cpp  output.txt
project3/src/include/: ConsoleOutput.h  knapsack.h
project3/src/output/: ConsoleOutput.cpp
project4/: CMakeLists.txt
project4/src/: Board.cpp  Console.cpp  Deck.cpp  Player.cpp  Simulation.cpp  Stats.cpp  main.cpp
project4/src/header/: Board.h  Card.h  Console.h  Deck.h  JailStrategy.h  Player.h  Simulation.h  Square.h  Stats.h
project4/src/header/Square/: OwnableSquare.h  PropertySquare.h  RailroadSquare.h  Square.h  TaxSquare.h  UtilitySquare.h
